--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
     "@vitejs/plugin-react": "^5.0.4",
+    "@tailwindcss/vite": "^4.1.14",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.37.0",
     "eslint-plugin-react": "^7.37.5",
